# Rephraser

./: Cargo.toml  LICENSE  README.md
automator/: README.md
docs/: architecture.md
examples/: example_config.toml
src/: error.rs  lib.rs  main.rs
src/actions/: mod.rs  resolver.rs  template.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: manager.rs  mod.rs  models.rs
src/llm/: anthropic.rs  client.rs  mock.rs  mod.rs  openai.rs
src/output/: formatter.rs  mod.rs
